workloads/medium-place/synapse/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: synapse
  namespace: medium-place
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse
    app.kubernetes.io/version: 1.65.0

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
      app.kubernetes.io/part-of: synapse

  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: synapse
        app.kubernetes.io/part-of: synapse
        app.kubernetes.io/version: 1.65.0

    spec:
      volumes:
        - name: synapse-config
          secret:
            secretName: synapse-config
        - name: synapse-bridge-registration
          secret:
            secretName: synapse-bridge-registration

      containers:
        - name: synapse
          image: forge.medium.place/christoph/synapse:1.65.0
          imagePullSecrets:
            - name: forge

          volumeMounts:
            - name: synapse-config
              mountPath: /data
              readOnly: true
            - name: synapse-bridge-registration
              mountPath: /registrations
              readOnly: true

          ports:
            - name: http
              protocol: TCP
              containerPort: 8008
