workloads/medium-place/synapse/synapse/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: synapse
  namespace: medium-place
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse
    app.kubernetes.io/version: 1.68.0

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
      app.kubernetes.io/part-of: synapse

  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: synapse
        app.kubernetes.io/part-of: synapse
        app.kubernetes.io/version: 1.68.0

    spec:
      volumes:
        - name: synapse-config
          secret:
            secretName: synapse-config
        - name: synapse-bridge-registration
          secret:
            secretName: synapse-bridge-registration

      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.68.0

          volumeMounts:
            - name: data
              mountPath: /data
            - name: synapse-config
              mountPath: /config
              readOnly: true
            - name: synapse-bridge-registration
              mountPath: /registrations
              readOnly: true

          ports:
            - name: http
              protocol: TCP
              containerPort: 8008

    volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 10Gi
