workloads/medium-place/synapse/synapse/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: synapse
  namespace: medium-place
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse
    app.kubernetes.io/version: 1.62.0

spec:
  selector:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse

  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: http
